--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
